--- a/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
@@ -5,7 +5,7 @@ export enum Roles
   {% for role in efsm.roles -%}
   {{ role }} = "{{ role }}" {{ ', ' if not loop.last else '' }}
   {%- endfor %}
-}
+};
 
 export namespace Labels
 {
@@ -15,7 +15,7 @@ export namespace Labels
     {% for label in state.labels -%}
     {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
     {%- endfor %}
-  }
+  };
   {%- endfor %}
   {% for state_id, state in efsm.send_states.items() -%}
   export enum S{{ state_id }} 
@@ -23,9 +23,9 @@ export namespace Labels
     {% for label in state.labels -%}
     {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
     {%- endfor %}
-  }
+  };
   {%- endfor %}
-}
+};
 
 {% if efsm.has_terminal_state() -%}
 export type S{{ efsm.terminal_state }} = Session.Terminate;
@@ -34,13 +34,14 @@ export type S{{ efsm.terminal_state }} = Session.Terminate;
 {% for state_id, state in efsm.send_states.items() -%}
 export type S{{ state_id }} = {% for label, action in state.actions.items() -%}
 [Labels.S{{ state_id }}.{{ label }}, S{{ action.succ }}]{{ '|' if not loop.last else '' }}
-{%- endfor %}
+{%- endfor %};
 {% endfor -%}
 
 {% for state_id, state in efsm.receive_states.items() -%}
-export type S{{ state_id }} = {
+export type S{{ state_id }} = 
+{
   {% for label, action in state.actions.items() -%}
   [Labels.S{{ state_id }}.{{ label }}]: () => S{{ action.succ }}{{ ',' if not loop.last else '' }}
   {%- endfor %}
-}
-{%- endfor %}
+};
+{% endfor %}
