--- a/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
@@ -1,7 +1,7 @@
 import React from 'react';
 
-import { ReceiveState, SendState, TerminalState } from './../EFSM'; 
-import { SendComponentFactory, SendComponentFactoryFactory } from './../Session';
+import { ReceiveState, SendState, TerminalState } from './EFSM'; 
+import { SendComponentFactory, SendComponentFactoryFactory } from './Session';
 
 type P = {
   factory: SendComponentFactoryFactory
