Adapt Node templates with updated EFSM API

--- a/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
@@ -3,7 +3,7 @@
 // ==============
 
 export enum Roles {
-  {% for role in efsm.roles -%}
+  {% for role in efsm.other_roles -%}
   {{ role }} = "{{ role }}" {{ ', ' if not loop.last else '' }}
   {%- endfor %}
 };
@@ -13,16 +13,16 @@ export enum Roles {
 // ==============
 
 export namespace Labels {
-  {% for state_id, state in efsm.receive_states.items() -%}
-  export enum S{{ state_id }} 
+  {% for state in efsm.receive_states -%}
+  export enum S{{ state.id }} 
   {
     {% for label in state.labels -%}
     {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
     {%- endfor %}
   };
   {%- endfor %}
-  {% for state_id, state in efsm.send_states.items() -%}
-  export enum S{{ state_id }} 
+  {% for state in efsm.send_states -%}
+  export enum S{{ state.id }} 
   {
     {% for label in state.labels -%}
     {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
@@ -36,20 +36,20 @@ export namespace Labels {
 // ======
 
 export enum SendState {
-  {% for state in efsm.send_states.values() -%}
+  {% for state in efsm.send_states -%}
   S{{ state.id }} = 'S{{ state.id }}',
   {%- endfor %}
 };
 
 export enum ReceiveState {
-  {% for state in efsm.receive_states.values() -%}
+  {% for state in efsm.receive_states -%}
   S{{ state.id }} = 'S{{ state.id }}',
   {%- endfor %}
 };
 
 export enum TerminalState {
   {% if efsm.has_terminal_state() -%}
-  S{{ efsm.terminal_state }} = 'S{{ efsm.terminal_state }}',
+  S{{ efsm.terminal_state.id }} = 'S{{ efsm.terminal_state.id }}',
   {%- endif %}
 };
 
@@ -61,33 +61,33 @@ export type State = SendState | ReceiveState | TerminalState
 {% if efsm.has_terminal_state() -%}
 type _Terminate = 'Terminate';
 export const Terminate: _Terminate = 'Terminate';
-export type S{{ efsm.terminal_state }} = _Terminate;
+export type S{{ efsm.terminal_state.id }} = _Terminate;
 {% endif -%}
 
-{% for state_id, state in efsm.send_states.items() -%}
-export type S{{ state_id }} = {% for label, action in state.actions.items() -%}
-[Labels.S{{ state_id }}.{{ label }}, S{{ action.succ }}]{{ '|' if not loop.last else '' }}
+{% for state in efsm.send_states -%}
+export type S{{ state.id }} = {% for action in state.actions -%}
+[Labels.S{{ state.id }}.{{ action.label }}, S{{ action.succ }}]{{ '|' if not loop.last else '' }}
 {%- endfor %};
 {% endfor -%}
 
-{% for state_id, state in efsm.receive_states.items() -%}
-export type S{{ state_id }} = {
-  {% for label, action in state.actions.items() -%}
-  [Labels.S{{ state_id }}.{{ label }}]: () => S{{ action.succ }}{{ ',' if not loop.last else '' }}
+{% for state in efsm.receive_states -%}
+export type S{{ state.id }} = {
+  {% for action in state.actions -%}
+  [Labels.S{{ state.id }}.{{ action.label }}]: () => S{{ action.succ }}{{ ',' if not loop.last else '' }}
   {%- endfor %}
 };
 {% endfor %}
 
-export type SendImplementation = {% for state in efsm.send_states.values() -%}
+export type SendImplementation = {% for state in efsm.send_states -%}
 S{{ state.id }} {{ '|' if not loop.last else '' }}
 {%- endfor %};
 
-export type ReceiveImplementation = {% for state in efsm.receive_states.values() -%}
+export type ReceiveImplementation = {% for state in efsm.receive_states -%}
 S{{ state.id }} {{ '|' if not loop.last else '' }}
 {%- endfor %};
 
 {% if efsm.has_terminal_state() -%}
-export type TerminalImplementation = S{{ efsm.terminal_state }};
+export type TerminalImplementation = S{{ efsm.terminal_state.id }};
 {%- endif %}
 export type Implementation<S extends State> = 
   S extends ReceiveState ? ReceiveImplementation : 
@@ -97,18 +97,18 @@ export type Implementation<S extends State> =
 // State Modules
 // =============
 
-{% for state in efsm.send_states.values() -%}
+{% for state in efsm.send_states -%}
 import * as ModuleS{{ state.id }} from './S{{ state.id }}';
 {% endfor %}
-{% for state in efsm.receive_states.values() -%}
+{% for state in efsm.receive_states -%}
 import * as ModuleS{{ state.id }} from './S{{ state.id }}';
 {% endfor %}
 
 export const stateModule = {
-  {% for state in efsm.send_states.values() -%}
+  {% for state in efsm.send_states -%}
   [SendState.S{{ state.id }}]: ModuleS{{ state.id }},
   {%- endfor %}
-  {% for state in efsm.receive_states.values() -%}
+  {% for state in efsm.receive_states -%}
   [ReceiveState.S{{ state.id }}]: ModuleS{{ state.id }},
   {%- endfor %}
 }
