--- a/mpst_ts/codegen/generator/node/templates/receive_module.ts.j2
+++ b/mpst_ts/codegen/generator/node/templates/receive_module.ts.j2
@@ -1,7 +1,7 @@
 import { Labels, S{{ state.id }}, SendState, ReceiveState, TerminalState } from './EFSM';
 import { EfsmNextStateHandler, MessageHandler } from './Session';
 
-{% for action in state.actions.values() -%}
+{% for action in state.actions -%}
 type {{ action.label ~ 'Message' }} = {
   label: Labels.S{{ state.id }}.{{ action.label }},
   payload: []
@@ -13,7 +13,7 @@ type Message = {% for label in state.labels -%}{{ label ~ 'Message' ~ (' | ' if 
 export function buildStateHandler(
   next: EfsmNextStateHandler,
   register: (messageHandler: MessageHandler) => void
-  ) {
+) {
 
   return (handler: S{{ state.id }}) => {
     // Define message handler.
@@ -21,7 +21,7 @@ export function buildStateHandler(
       
       const parsedMessage = JSON.parse(message) as Message;
       switch (parsedMessage.label) {
-        {% for action in state.actions.values() -%}
+        {% for action in state.actions -%}
         case Labels.S{{ state.id }}.{{ action.label }}: {
           const successor = handler[parsedMessage.label]();
           {% if efsm.is_send_state(action.succ) -%}
