--- a/mpst_ts/codegen/generator/node/templates/runtime.ts.j2
+++ b/mpst_ts/codegen/generator/node/templates/runtime.ts.j2
@@ -5,7 +5,7 @@ import {
   isSendState, isReceiveState, isTerminalState,  
 } from './Session';
 import {
-  Roles, Implementation, S{{ efsm.initial_state }},
+  Roles, Implementation, S{{ efsm.initial_state.id }},
   State, SendState, ReceiveState, TerminalState,
   stateModule,
 } from './EFSM';
@@ -39,13 +39,13 @@ export class {{ efsm.metadata.role }}
   private roleToSocket: Partial<RoleToSocket>
 
   constructor(wss: WebSocket.Server,
-              initialState: S{{ efsm.initial_state }})
+              initialState: S{{ efsm.initial_state.id }})
   {
     this.wss = wss;
-    this.waiting = new Set<Roles>([{% for role in efsm.roles %}Roles.{{ role ~ (',' if not loop.last else '') }}{% endfor %}])
+    this.waiting = new Set<Roles>([{% for role in efsm.other_roles %}Roles.{{ role ~ (',' if not loop.last else '') }}{% endfor %}])
 
     this.roleToSocket = {
-      {% for role in efsm.roles -%}
+      {% for role in efsm.other_roles -%}
       [Roles.{{ role }}]: undefined,
       {%- endfor %}
     };
@@ -83,13 +83,13 @@ class _{{ efsm.metadata.role }} {
     private wss: WebSocket.Server
     private roleToSocket: RoleToSocket
     
-    private initialState: S{{ efsm.initial_state }}
+    private initialState: S{{ efsm.initial_state.id }}
     private messageQueue: any[] = []
     private handlerQueue: (MessageHandler)[] = []
 
     constructor(wss: WebSocket.Server,
                 roleToSocket: RoleToSocket,
-                initialState: S{{ efsm.initial_state }}) {
+                initialState: S{{ efsm.initial_state.id }}) {
       this.wss = wss;
       this.roleToSocket = roleToSocket;
       this.initialState = initialState;
@@ -110,11 +110,11 @@ class _{{ efsm.metadata.role }} {
 
       // Initialise state machine.
       {% if efsm.is_send_state(efsm.initial_state) -%}
-      this.next(SendState.S{{ efsm.initial_state }})(initialState);
+      this.next(SendState.S{{ efsm.initial_state.id }})(initialState);
       {% elif efsm.is_receive_state(efsm.initial_state) -%}
-      this.next(ReceiveState.S{{ efsm.initial_state }})(initialState);
+      this.next(ReceiveState.S{{ efsm.initial_state.id }})(initialState);
       {% else -%}
-      this.next(TerminalState.S{{ efsm.initial_state }})(initialState);
+      this.next(TerminalState.S{{ efsm.initial_state.id }})(initialState);
       {% endif -%}
     }
 
@@ -134,6 +134,7 @@ class _{{ efsm.metadata.role }} {
     }
 
     nextSend<S extends SendState>(state: S): ((implementation: Implementation<S>) => any) {
+      // TODO: how to fix this mandatory type assertion?
       return stateModule[state].buildStateHandler(this.next, this.send) as ((implementation: Implementation<S>) => any);
     }
 
@@ -178,142 +179,3 @@ class _{{ efsm.metadata.role }} {
       }
     }
 }
-
-
-/*
-class _{{ efsm.metadata.role }}
-{
-
-  private wss: WebSocket.Server
-  private roleToSocket: RoleToSocket
-  private state: any
-  private initialState: S{{ efsm.initial_state }}
-  private handlerQueue: any[]
-  private messageQueue: any[]
-
-  constructor(wss: WebSocket.Server,
-              roleToSocket: RoleToSocket,
-              initialState: S{{ efsm.initial_state }})
-  {
-    this.wss = wss;
-    this.roleToSocket = roleToSocket;
-
-    // Bind message handler.
-    Object.values(this.roleToSocket).forEach(socket => {
-      socket.addEventListener('message', this.receive.bind(this));
-    });
-
-    // Initialise queues for receiving.
-    this.handlerQueue = []
-    this.messageQueue = []
-
-    // Initialise state machine.
-    this.state = {{ efsm.initial_state }};
-    this.initialState = initialState;
-    this.execute({{ efsm.initial_state }}, initialState);
-
-  }
-
-  private execute(stateId: any,
-                  stateImpl: any): void
-  {
-    this.state = stateId;
-    switch (this.state)
-    {
-      {% for state_id, state in efsm.send_states.items() -%}
-      case {{ state_id }}:
-      {
-        const _stateImpl: S{{ state_id }} = stateImpl;
-        this.send(Roles.{{ state.role }}, _stateImpl[0], []);
-
-        switch (_stateImpl[0])
-        {
-          {% for label, action in state.actions.items() -%}
-          case Labels.S{{ state_id }}.{{ label }}:
-          {
-            return this.execute({{ action.succ }}, _stateImpl[1]);
-          }
-          {%- endfor %}
-        }
-      }
-      {% endfor -%}
-
-      {% for state_id, state in efsm.receive_states.items() -%}
-      case {{ state_id }}:
-      {
-        const _stateImpl: S{{ state_id }} = stateImpl;
-
-        const handler: any = (message: any) => {
-          const label: Labels.S{{ state_id }} = message.label;
-          const payload: any[] = message.payload;
-
-          const succ: any = _stateImpl[label]();
-          switch (label)
-          {
-            {% for label, action in state.actions.items() -%}
-            case Labels.S{{ state_id }}.{{ label }}:
-            {
-              return this.execute({{ action.succ }}, succ);
-            }
-            {%- endfor %}
-          }
-        }
-
-        if (this.messageQueue.length > 0)
-        {
-          handler(this.messageQueue.shift());
-        }
-        else
-        {
-          this.handlerQueue.push(handler);
-        }
-        break;
-      }
-      {% endfor -%}
-
-      {% if efsm.has_terminal_state() -%}
-      case {{ efsm.terminal_state }}:
-      {
-        this.end();
-        break;
-      }
-      {%- endif %}
-    }
-  }
-
-  private send(role: Roles,
-               label: any,
-               payload: any[])
-  {
-    const message = JSON.stringify({ label, payload });
-    this.roleToSocket[role].send(message);
-  }
-
-  private receive(message: WebSocketMessage)
-  {
-    const parsedMessage = JSON.parse(message.data);
-
-    if (this.handlerQueue.length > 0)
-    {
-      // Pop handler off queue to process message.
-      this.handlerQueue.shift()(parsedMessage);
-    }
-    else
-    {
-      // Push parsed message onto message queue
-      // for next receive.
-      this.messageQueue.push(parsedMessage)
-    }
-  }
-
-  private end()
-  {
-    Object.values(this.roleToSocket).forEach(socket => {
-      socket.close();
-    });
-
-    new {{ efsm.metadata.role }}(this.wss, this.initialState);
-  }
-
-}
-*/
