--- a/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/templates/efsm.ts.j2
@@ -4,7 +4,7 @@
 
 export enum Roles {
   {% for role in efsm.other_roles -%}
-  {{ role }} = "{{ role }}" {{ ', ' if not loop.last else '' }}
+  {{ role }} = "{{ role }}",
   {%- endfor %}
 };
 
@@ -17,7 +17,7 @@ export namespace Labels {
   export enum S{{ state.id }} 
   {
     {% for label in state.labels -%}
-    {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
+    {{ label }} = "{{ label }}",
     {%- endfor %}
   };
   {%- endfor %}
@@ -25,7 +25,7 @@ export namespace Labels {
   export enum S{{ state.id }} 
   {
     {% for label in state.labels -%}
-    {{ label }} = "{{ label }}" {{ ', ' if not loop.last else '' }}
+    {{ label }} = "{{ label }}",
     {%- endfor %}
   };
   {%- endfor %}
@@ -66,32 +66,36 @@ export type S{{ efsm.terminal_state.id }} = _Terminate;
 
 {% for state in efsm.send_states -%}
 export type S{{ state.id }} = {% for action in state.actions -%}
-[Labels.S{{ state.id }}.{{ action.label }}, S{{ action.succ }}]{{ '|' if not loop.last else '' }}
+| [Labels.S{{ state.id }}.{{ action.label }}, S{{ action.succ }}]
 {%- endfor %};
 {% endfor -%}
 
 {% for state in efsm.receive_states -%}
 export type S{{ state.id }} = {
   {% for action in state.actions -%}
-  [Labels.S{{ state.id }}.{{ action.label }}]: () => S{{ action.succ }}{{ ',' if not loop.last else '' }}
+  [Labels.S{{ state.id }}.{{ action.label }}]: () => S{{ action.succ }},
   {%- endfor %}
 };
 {% endfor %}
 
-export type SendImplementation = {% for state in efsm.send_states -%}
-S{{ state.id }} {{ '|' if not loop.last else '' }}
-{%- endfor %};
+export type SendImplementation<S extends SendState> = 
+{% for state in efsm.send_states -%}
+S extends SendState.S{{ state.id }} ? S{{ state.id }} :
+{% endfor -%}
+never;
 
-export type ReceiveImplementation = {% for state in efsm.receive_states -%}
-S{{ state.id }} {{ '|' if not loop.last else '' }}
-{%- endfor %};
+export type ReceiveImplementation<S extends ReceiveState> = 
+{% for state in efsm.receive_states -%}
+S extends ReceiveState.S{{ state.id }} ? S{{ state.id }} :
+{% endfor -%}
+never;
 
 {% if efsm.has_terminal_state() -%}
 export type TerminalImplementation = S{{ efsm.terminal_state.id }};
 {%- endif %}
 export type Implementation<S extends State> = 
-  S extends ReceiveState ? ReceiveImplementation : 
-  S extends SendState ? SendImplementation : {{ 'TerminalImplementation' if efsm.has_terminal_state() else 'never' }};
+  S extends ReceiveState ? ReceiveImplementation<S> : 
+  S extends SendState ? SendImplementation<S> : {{ 'TerminalImplementation' if efsm.has_terminal_state() else 'never' }};
 
 // =============
 // State Modules
