Minor fix to React templates

--- a/mpst_ts/codegen/generator/browser/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/receive_component.tsx.j2
@@ -19,7 +19,7 @@ type {{ label }}Message = {
 };
 {% endfor %}
 
-type Message = {% for label in state.labels -%}{{ label ~ 'Message' ~ (' | ' if not loop.last else '') }}{%- endfor %}
+type Message = {% for label in state.labels -%}{{ '| ' ~ label ~ 'Message' }}{%- endfor %}
 
 export abstract class S{{ state.id }}<
   _P = {},
